# duo-cli

./: .gitignore  README.md  pyproject.toml
src/duo_cli/: __init__.py  daemon.py  launcher.py  main.py  state.py
src/duoduo/: __init__.py  daemon.py  launcher.py  main.py  state.py
