[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "duoduo"
version = "0.1.0"
description = "CLI tools for duoduo multi-agent PR review"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "notdp" }]
keywords = ["droid", "agent", "cli", "pr-review", "duoduo"]
dependencies = [
    "click>=8.0",
    "droid-agent-sdk",
]

[project.scripts]
duo = "duoduo.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/duoduo"]
